DVL-6 Fix center alignment. Working on making pdf viewer work...

--- a/consent-idp/docker/modules/consent/assets/css/index.css
+++ b/consent-idp/docker/modules/consent/assets/css/index.css
@@ -45,7 +45,7 @@ body {
     flex: 1 1 auto;
 }
 
-.pin-input-container > div {
+.center-content {
     align-items: center;
     display: flex;
     flex-direction: column;
